--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,22 +35,33 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^3.1.0   # 新增了这一行
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   intl: ^0.17.0
   font_awesome_flutter: ^9.0.0
   flutter_rating_bar: ^4.0.0
   # 实现瀑布流的组件
   flutter_staggered_grid_view: ^0.6.1
+  # http
+  dio: ^3.0.10
+  # json注解式
+  json_annotation: ^3.0.0
+  # 网络检查
+  connectivity: ^2.0.2
+    #本地存储
+  shared_preferences: ^0.5.12+4
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+
+  build_runner: ^1.0.0
+  json_serializable: ^3.0.0
+
+  # The "flutter_lints" package below contains a set of recommended lints to
+  # encourage good coding practices. The lint set provided by the package is
+  # activated in the `analysis_options.yaml` file located at the root of your
+  # package. See that file for information about deactivating specific lint
+  # rules and activating additional ones.
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
