--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   #本地存储
   shared_preferences: ^0.5.12+4
   flutter_easyrefresh: ^2.0.5
+  flutter_slidable: ^1.2.0
 
 dev_dependencies:
   flutter_test:
