--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   flutter_easyrefresh: ^2.0.5
   flutter_slidable: ^1.2.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
