--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_easyrefresh: ^2.0.5
   flutter_slidable: ^1.2.0
   fluttertoast: ^8.0.9
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
