--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_svg: ^0.19.1
   image_picker: ^0.6.7+21
+  # 屏幕像素大小适配
+  flutter_screenutil: ^0.5.2
 
 dev_dependencies:
   flutter_test:
