--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   flutter_svg: ^0.19.1
   image_picker: ^0.6.7+21
+  image_picker_for_web: ^0.1.0
   # 屏幕像素大小适配
   flutter_screenutil: ^0.5.2
   # 图片压缩
